; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_zap.c_zap_join_key.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_zap.c_zap_join_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32, i32 }

@KM_SLEEP = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @zap_join_key(i32* %0, i32 %1, i32 %2, i32 %3, i32* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca %struct.TYPE_5__*, align 8
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32* %4, i32** %10, align 8
  store i32 0, i32* %12, align 4
  %14 = load i32, i32* @KM_SLEEP, align 4
  %15 = call %struct.TYPE_5__* @kmem_alloc(i32 12, i32 %14)
  store %struct.TYPE_5__* %15, %struct.TYPE_5__** %13, align 8
  %16 = load i32*, i32** %6, align 8
  %17 = load i32, i32* %7, align 4
  %18 = call i32 @zap_cursor_init(i32* %11, i32* %16, i32 %17)
  br label %19

19:                                               ; preds = %48, %5
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %13, align 8
  %21 = call i64 @zap_cursor_retrieve(i32* %11, %struct.TYPE_5__* %20)
  %22 = icmp eq i64 %21, 0
  br i1 %22, label %23, label %50

23:                                               ; preds = %19
  %24 = load %struct.TYPE_5__*, %struct.TYPE_5__** %13, align 8
  %25 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = icmp ne i32 %26, 8
  br i1 %27, label %33, label %28

28:                                               ; preds = %23
  %29 = load %struct.TYPE_5__*, %struct.TYPE_5__** %13, align 8
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %29, i32 0, i32 1
  %31 = load i32, i32* %30, align 4
  %32 = icmp ne i32 %31, 1
  br i1 %32, label %33, label %36

33:                                               ; preds = %28, %23
  %34 = load i32, i32* @EINVAL, align 4
  %35 = call i32 @SET_ERROR(i32 %34)
  store i32 %35, i32* %12, align 4
  br label %50

36:                                               ; preds = %28
  %37 = load i32*, i32** %6, align 8
  %38 = load i32, i32* %8, align 4
  %39 = load %struct.TYPE_5__*, %struct.TYPE_5__** %13, align 8
  %40 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %39, i32 0, i32 2
  %41 = load i32, i32* %40, align 4
  %42 = load i32*, i32** %10, align 8
  %43 = call i32 @zap_add(i32* %37, i32 %38, i32 %41, i32 8, i32 1, i32* %9, i32* %42)
  store i32 %43, i32* %12, align 4
  %44 = load i32, i32* %12, align 4
  %45 = icmp ne i32 %44, 0
  br i1 %45, label %46, label %47

46:                                               ; preds = %36
  br label %50

47:                                               ; preds = %36
  br label %48

48:                                               ; preds = %47
  %49 = call i32 @zap_cursor_advance(i32* %11)
  br label %19

50:                                               ; preds = %46, %33, %19
  %51 = call i32 @zap_cursor_fini(i32* %11)
  %52 = load %struct.TYPE_5__*, %struct.TYPE_5__** %13, align 8
  %53 = call i32 @kmem_free(%struct.TYPE_5__* %52, i32 12)
  %54 = load i32, i32* %12, align 4
  ret i32 %54
}

declare dso_local %struct.TYPE_5__* @kmem_alloc(i32, i32) #1

declare dso_local i32 @zap_cursor_init(i32*, i32*, i32) #1

declare dso_local i64 @zap_cursor_retrieve(i32*, %struct.TYPE_5__*) #1

declare dso_local i32 @SET_ERROR(i32) #1

declare dso_local i32 @zap_add(i32*, i32, i32, i32, i32, i32*, i32*) #1

declare dso_local i32 @zap_cursor_advance(i32*) #1

declare dso_local i32 @zap_cursor_fini(i32*) #1

declare dso_local i32 @kmem_free(%struct.TYPE_5__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
